src/less/blocks/autosuggest.less
.autosuggest {
  @width: 100%;
  @border-color: #aaa;
  @border-radius: 4px;

  &__container {
    position: relative;
  }

  &__input {
    width: @width;
    &[aria-expanded="true"] {
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;
    }
  }

  &__suggestions_container {
    box-sizing: border-box;
    position: absolute;
    width: @width;
    margin: 0;
    padding: 0;
    list-style-type: none;
    //border: 1px solid @border-color;
    border-top: none;
    background-color: #fff;
    border-bottom-left-radius: @border-radius;
    border-bottom-right-radius: @border-radius;
    z-index: 2;
  }

  &__section {
    &_name {
      padding: 10px 0 0 10px;
      font-size: 12px;
      text-transform: uppercase;
      color: #777;
      border-top: 1px dashed #ccc;
    }

    &_suggestions_container {
      margin: 0;
      padding: 0;
      list-style-type: none;
    }
  }

  &__suggestion {
    cursor: pointer;
    padding: 10px 20px;

    &-focused {
      background-color: #ddd;
    }
  }
}

